spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ body {
 
 .content {
   display: flex;
-  padding: 30px 30px 250px 30px;
+  padding: 30px 30px 200px 30px;
   width: 100%;
   height: auto;
   display: flex;
